
2014-01-23
- bios/xhdi.c: Code cleanup: remove unnecessary case statements. (RFB)
- bios/floppy.c: Detect floppy drives when no disks are inserted. (RFB)

2014-01-24
- bios/disk.c bios/xhdi.c: Always assign at least 1 logical device to
  the SD/MMC slot. (RFB)

2014-01-26
- bios/ide.c: Bypass firmware bug on certain CF cards which caused
  multi-sector i/o to fail. (RFB)
- desk/deskmain.c desk/desksupp.c: Avoid opening window for a disk that
  no longer exists. (RFB)
- bios/disk.c: Code cleanup: use pointer instead of index. (RFB)
- aes/gemaplib.c aes/gemevlib.c aes/gemgsxif.c aes/gemoblib.c
  aes/gemrslib.c aes/gemsuper.c aes/gemwmlib.c: Code cleanup: eliminate
  ADDR() macro in AES routines. (RFB)

2014-01-27
- aes/gemaplib.c aes/gemaplib.h aes/gemdisp.c aes/geminit.c
  aes/gemsuper.c aes/struct.h: Fix appl_trecord() & appl_tplay(). (RFB)
- include/compat.h: Remove #define for LWSET(), no longer used. (RFB)
- desk/gembind.c: Code cleanup: remove unnecessary global. (RFB)
- desk/deskact.c: Code cleanup: remove a few more ADDR() macros. (RFB)

2014-01-29
- bios/disk.c: Fix regression: ext2 partitions were not assigned
  (inaccessible) logical drives. (RFB)
- desk/deskmain.c desk/desksupp.c: Revert previous update which caused
  various problems with removable disks. (RFB)

2014-01-30
- bios/ide.c: Avoid using multi-sector i/o unless it's beneficial. (RFB)

2014-02-01
- aes/gemgsxif.c aes/gsx2.h: Eliminate redundant macro i_lptr1(). (RFB)
- aes/gemshlib.c aes/gsx2.h include/compat.h: Code cleanup: eliminate
  LLSET() compatibility macro. (RFB)
- aes/gemgsxif.c aes/gemoblib.c desk/deskapp.c include/compat.h: Code
  cleanup: eliminate LLGET() compatibility macro. (RFB)

2014-02-02
- aes/gemdos.c aes/gemdos.h aes/geminit.c aes/gemrslib.c desk/deskapp.c
  desk/deskdir.c: Change arg3 of dos_read()/dos_write() from LONG to
  void *. (RFB)
- bios/blkdev.c: Fix regression of 2014-01-09: mediachange was not set
  properly for SCSI bus (affects Aranym). (RFB)